# Curser-can-read-.xlsx-files

./: .gitignore  FORK_READINESS.md  LICENSE  README.md  SECURITY.md  WHY.md  index.js  package-lock.json  package.json
.github/: audit-allowlist.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: audit.yml  publish.yml  upgrade-verify.yml
cursor-rule-template/: read-xlsx.mdc
docs/: INTEGRITY_PINNING.md  KNOWN-BUGS.md  PYTHON-XLSX-ARCHITECTURE.md
lib/: bugReport.js  engine.js  redactWorkbook.js  telemetry-config.js  telemetry-hooks.js  telemetry-sanitize.js
supervisor/: .gitignore  README.md  pyproject.toml  requirements.txt
supervisor/app/: __init__.py  main.py  processor.py  reviewer.py  storage.py
supervisor/static/: styles.css
supervisor/templates/: index.html  upload_error.html  upload_result.html
supervisor/tests/: test_app.py  test_processor.py  test_reviewer.py
test/: README.md  output-matrix.test.js  round-trip.test.js
test/helpers/: metadata.js  synth.js
test/unit/: region.test.js  utilities.test.js
tests/: bugReport.test.js  redactWorkbook-leak-check.test.js  redactWorkbook.test.js  region-cap.test.js  telemetry-config.test.js  telemetry-consent-version.test.js  telemetry-flags.test.js  telemetry-sanitize.test.js
tests/fixtures/: build.js
